# ERP

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  tailwind.config.ts
.github/: pull_request_template.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260517_0001_ewdb_baseline.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py  utils.py
backend/app/api/v1/endpoints/: batch_numbers.py  goods_receipt_notes.py  health.py  inventory_records.py  product_orders.py  purchase_orders.py  purchase_requests.py  workflows.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  ewdb.py
backend/app/schemas/: batch_numbers.py  goods_receipt_notes.py  inventory_records.py  product_orders.py  purchase_orders.py  purchase_requests.py  workflows.py
backend/app/services/: batch_numbers.py  goods_receipt_notes.py  inventory_records.py  product_orders.py  purchase_orders.py  purchase_requests.py  workflows.py
backend/tests/: conftest.py  test_batch_numbers.py  test_goods_receipt_notes.py  test_health.py  test_inventory_records.py  test_product_orders.py  test_purchase_orders.py  test_purchase_requests.py  test_workflows.py
docs/: ERP_2_0_ENGINEERING_OWNERSHIP_AND_VERIFICATION_PLAN_20260524.md
scripts/: convert_word_schema.ps1  fix_unique_keys_20260517.ps1  generate_ewdb_baseline.py  generate_restserver_api_index.py  run_restserver_runtime_verification.ps1  verify_restserver_runtime.py  (+1 more)
(+496 files in other folders)
